syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";

package blobkeeper;

service BlobKeeper {
    rpc GetBlob(stream PutRequest) returns (PutResponse) {}
}

message PutRequest {
    string name = 1;
    bytes data = 2;
    int64 offset = 3;
}

message PutResponse {
    int32 status = 1;
    string message = 2;
}